2007-09-04  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/tny-camel-account.h: Change the 
	TnyCamelGetSupportedSecureAuthCallback callback to provide a
	GError* instead of a GError**, because it is not an output parameter.
	* libtinymail-camel/tny-camel-account.c: (on_supauth_idle_func),
	(tny_camel_account_get_supported_secure_authentication_async_thread
	), (tny_camel_account_get_supported_secure_authentication):
	Adapt to the change, propagating GErrors up to the callback.

2007-09-04  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed a problem when folder creation failed: observers where
	nevertheless notified about a folder creation in this case

2007-09-04  Mark Doffman  <mark.doffman@codethink.co.uk>

	* bindigs/python/*: restructuring the Python language bindings

2007-09-04  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/tny-camel-account.c:
	(tny_camel_account_set_url_string_default),
	(tny_camel_account_set_name_default),
	(tny_camel_account_set_id_default),
	(tny_camel_account_set_secure_auth_mech_default),
	(tny_camel_account_set_proto_default),
	(tny_camel_account_set_user_default),
	(tny_camel_account_set_hostname_default),
	(tny_camel_account_set_port_default),
	(tny_camel_account_set_pass_func_default),
	(tny_camel_account_set_forget_pass_func_default): Check that the input 
	is differnt to the existing value, to avoid unnecessarily signalling that 
	the account has changed.

2007-09-04  Javier Fernandez Garcia-Boente  <jfernandez@igalia.com>

	* Fixed bug in update folder observers call, creating 
	the new change object to propagate it to observers.
 
2007-09-04  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c: fixed the default function
	used to implement the get_local_size interface

2007-09-04  Vivek Sekar  <viveksekar@gmail.com>

	* Added AC_CONFIG_AUX_DIR(.) to
	libtinymail-camel/camel-lite/configure.ac : fixes a maemo integration
	build error.
	